Add cars endpoint and swaggo documentation
