# docs/swagger.json
@@ -4,6 +4,101 @@
         "contact": {}
     },
     "paths": {
+        "/cars": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieves a list of cars",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cars"
+                ],
+                "summary": "Get all cars",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Car"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
+        "/cars/:id": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieves a car by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cars"
+                ],
+                "summary": "Get car by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Car"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorNotFound"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorInternalServerError"
+                        }
+                    }
+                }
+            }
+        },
         "/rentals/rent": {
             "post": {
                 "security": [
@@ -24,6 +119,13 @@
                 "summary": "Rent a car",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "Rent Request",
                         "name": "request",
                         "in": "body",
@@ -34,44 +136,32 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/dtos.RentResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "car_rent": {
-                                            "$ref": "#/definitions/models.Car"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/dtos.RentResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid request body or data",
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/dtos.ErrorBadRequest"
                         }
                     },
                     "404": {
-                        "description": "Car not available",
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/dtos.ErrorNotFound"
                         }
                     },
                     "422": {
-                        "description": "Insufficient balance",
+                        "description": "Unprocessable Entity",
                         "schema": {
                             "$ref": "#/definitions/dtos.ErrorUnprocessableEntity"
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/dtos.ErrorInternalServerError"
                         }
@@ -97,6 +187,15 @@
                     "Rentals"
                 ],
                 "summary": "Get rental report",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -108,7 +207,7 @@
                         }
                     },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/dtos.ErrorInternalServerError"
                         }
@@ -260,6 +359,13 @@
                 ],
                 "summary": "Top up balance",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "With the bearer started",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Top Up Request",
                         "name": "request",
@@ -430,7 +536,14 @@
         "dtos.RentResponse": {
             "type": "object",
             "properties": {
-                "car_rent": {},
+                "car_category": {
+                    "type": "string",
+                    "example": "SUV"
+                },
+                "car_name": {
+                    "type": "string",
+                    "example": "Mercedes AMG G63"
+                },
                 "deposit_amount": {
                     "type": "number",
                     "example": 10000
@@ -530,6 +643,10 @@
         "models.Car": {
             "type": "object",
             "properties": {
+                "car_id": {
+                    "type": "integer",
+                    "example": 1
+                },
                 "category": {
                     "type": "string",
                     "example": "SUV"
@@ -537,6 +654,14 @@
                 "name": {
                     "type": "string",
                     "example": "Mercedes AMG G63"
+                },
+                "rental_costs": {
+                    "type": "number",
+                    "example": 10000000
+                },
+                "stock_availability": {
+                    "type": "integer",
+                    "example": 3
                 }
             }
         },
